k8s/homolog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-deployment
  namespace: core-prod # ou core-homolog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-service
  template:
    metadata:
      labels:
        app: core-service
    spec:
      containers:
        - name: core-service
          image: lucassuntech/core-service:develop # ou :develop
          ports:
            - containerPort: 3000
